--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
 
         header {
-            background-color: #333;
+            background-color: #444; /* Cinza escuro */
             color: #f1c40f; /* Amarelo refletivo */
             padding: 20px;
             text-align: center;
@@ -101,7 +101,7 @@
         }
 
         footer {
-            background-color: #333;
+            background-color: #444; /* Cinza escuro */
             color: white;
             text-align: center;
             padding: 15px 0;
