--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <!-- Call to Action -->
         <section id="contato" class="fade-in">
             <h2 class="section-title">Quer saber mais?</h2>
-            <a href="#" class="cta-button">Entre em Contato</a>
+            <a href="https://discord.gg/5GdwVmxSSR" class="cta-button">Entre em Contato</a>
         </section>
     </div>
 
